Adaugat clasele pentru AFD & AFN (AFN de modificat), adaugat buton de open from file (fara functionalitatea de desenat), adaugat buton de save to file (WV, pentru AFD)

--- a/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj
+++ b/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj
@@ -89,6 +89,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AFD.cpp" />
+    <ClCompile Include="AFN.cpp" />
     <ClCompile Include="Arch.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Node.cpp" />
@@ -100,6 +102,8 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AFD.h" />
+    <ClInclude Include="AFN.h" />
     <ClInclude Include="Arch.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Node.h" />
