Lucrari la animatie WP

--- a/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj
+++ b/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="AFD.cpp" />
     <ClCompile Include="AFN.cpp" />
     <ClCompile Include="AFN_lambda.cpp" />
+    <ClCompile Include="AnimationInterface.cpp" />
     <ClCompile Include="APD.cpp" />
     <ClCompile Include="APDArch.cpp" />
     <ClCompile Include="Arch.cpp" />
@@ -102,7 +103,9 @@
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="Prod.cpp" />
     <ClCompile Include="TextBox.cpp" />
+    <ClCompile Include="WordBox.cpp" />
     <QtRcc Include="Automaton_Interface.qrc" />
+    <QtUic Include="AnimationInterface.ui" />
     <QtUic Include="AutomatonTypeDialog.ui" />
     <QtUic Include="Automaton_Interface.ui" />
     <QtMoc Include="Automaton_Interface.h" />
@@ -113,11 +116,13 @@
     <ClInclude Include="AFD.h" />
     <ClInclude Include="AFN.h" />
     <ClInclude Include="AFN_lambda.h" />
+    <QtMoc Include="AnimationInterface.h" />
     <ClInclude Include="APD.h" />
     <ClInclude Include="APDArch.h" />
     <ClInclude Include="Arch.h" />
     <ClInclude Include="Automaton.h" />
     <ClInclude Include="AutomatonType.h" />
+    <QtMoc Include="WordBox.h" />
     <QtMoc Include="AutomatonTypeDialog.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Node.h" />
