--- a/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj.filters
+++ b/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj.filters
@@ -82,6 +82,12 @@
     <ClCompile Include="AutomatonType.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WordBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimationInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.h">
@@ -125,9 +131,18 @@
     <QtMoc Include="AutomatonTypeDialog.h">
       <Filter>Automatons</Filter>
     </QtMoc>
+    <QtMoc Include="WordBox.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="AnimationInterface.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="AutomatonTypeDialog.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="AnimationInterface.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
