Citirea din fisier si afisarea unei liste de cuvinte cu verificarea daca este acceptat sau nu

--- a/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj.filters
+++ b/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj.filters
@@ -137,4 +137,12 @@
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="WordstoVerify.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="WordsVerifyed.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
