--- a/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj
+++ b/Automaton_Interface/Automaton_Interface/Automaton_Interface.vcxproj
@@ -126,6 +126,10 @@
     <ClInclude Include="Prod.h" />
     <QtMoc Include="TextBox.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="WordstoVerify.txt" />
+    <Text Include="WordsVerifyed.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
